--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -3,9 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css"> 
 </head>
 <body>
-    hello world
-    <script src="./app.js"></script>
+    hello world with ejs
+    <div>
+        <img class="passport_photos" src="images/Passport_photos.jpg"
+    </div>
 </body>
 </html>
